appId: host.exp.Exponent
---
- openLink: exp://localhost:8081
- waitForAnimationToEnd:
    timeout: 1500
- runFlow:
    when:
      visible: "Open"
    commands:
      - tapOn: "Open"
- waitForAnimationToEnd:
    timeout: 3000
- waitForAnimationToEnd:
    timeout: 5000
- runFlow:
    when:
      visible: "Continue"
    commands:
      - tapOn: "Continue"
- runFlow:
    when:
      visible: "Bottom Sheet"
    commands:
      - swipe:
          start: "50%,34%"
          end: "50%,95%"
          duration: 500
- runFlow:
    when:
      visible: "Allow While Using App"
    commands:
      - tapOn: "Allow While Using App"
- waitForAnimationToEnd:
    timeout: 2000
- runFlow:
    when:
      visible: "Bottom Sheet"
    commands:
      - swipe:
          start: "50%,34%"
          end: "50%,95%"
          duration: 500
- runFlow:
    when:
      visible: "Experience needs permissions"
    commands:
      - swipe:
          start: "50%,34%"
          end: "50%,95%"
          duration: 500
      - extendedWaitUntil:
          visible: "Allow"
          timeout: 5000
      - tapOn: "Allow"
- extendedWaitUntil:
    visible:
      id: "saferoute-app-root"
    timeout: 45000
- runFlow:
    when:
      visible: "Allow While Using App"
    commands:
      - tapOn: "Allow While Using App"
